src/main/java/com/example/demo/error/ResponseStatus.java
package com.example.demo.error;

/**
 * Created by kwongiho on 2017. 6. 26..
 */
public interface ResponseStatus {
    String getResultCode();
}
